# veresiye-paxos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
proto/: paxos.proto
src/: main.rs
src/acceptor/: mod.rs
src/conf_manager/: mod.rs
src/learner/: mod.rs
src/paxos/: mod.rs
src/proposal/: mod.rs
src/proposer/: mod.rs
